<resources>
    <string name="app_name">PokeCatch</string>
    <string name="retry">Retry</string>
    <string name="name_or_number">Name or number</string>
    <string name="sub_title">Search for a Pokemon by name or using its National PokeCatch number.</string>
    <string name="base_stats">Base Stats</string>
    <string name="moves">Moves</string>
    <string name="hp">HP</string>
    <string name="attack">ATK</string>
    <string name="defense">DEF</string>
    <string name="speed">SPD</string>
    <string name="special_attack">SPATK</string>
    <string name="special_defense">SPDEF</string>
    <string name="catch_pokemon">Catch Pokemon</string>
    <string name="pokemon_caught">Pokemon Caught</string>
    <string name="my_pokemon">My Pokemon</string>
    <string name="pokemon_name">Pokemon Name</string>
    <string name="sub_title_bottom_sheet">It\'s time to give your favorite Pokemon a nickname!</string>
    <string name="done">Done</string>
    <string name="pokemon_released">Pokemon Released.</string>
    <string name="pokemon_cannot_released">Cannot Released Pokemon! Please try again.</string>
    <string name="pokemon_caughtt">Pokemon Caught!</string>
    <string name="pokemon_failed_catch">Failed to Catch Pokemon! Please try again.</string>
</resources>